# ChangeLog for dev-libs/apr
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/apr/ChangeLog,v 1.129 2009/06/21 14:12:24 ranger Exp $

  21 Jun 2009; Brent Baude <ranger@gentoo.org> apr-1.3.5.ebuild:
  Marking apr-1.3.5 ppc for bug 272260

  16 Jun 2009; Brent Baude <ranger@gentoo.org> apr-1.3.5.ebuild:
  Marking apr-1.3.5 ppc64 for bug 272260

  16 Jun 2009; Raúl Porcel <armin76@gentoo.org> apr-1.3.5.ebuild:
  arm/ia64/s390/sh/sparc stable wrt #272260

  11 Jun 2009; Tobias Klausmann <klausman@gentoo.org> apr-1.3.5.ebuild:
  Stable on alpha, bug #272260

  11 Jun 2009; Markus Meier <maekke@gentoo.org> apr-1.3.5.ebuild:
  amd64 stable, bug #272260

  10 Jun 2009; Christian Faulhammer <fauli@gentoo.org> apr-1.3.5.ebuild:
  stable x86, security bug 272260

  09 Jun 2009; Jeroen Roovers <jer@gentoo.org> apr-1.3.5.ebuild:
  Stable for HPPA (bug #272260).

*apr-1.3.5 (08 Jun 2009)

  08 Jun 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +apr-1.3.5.ebuild:
  Version bump.

  23 Jan 2009; Raúl Porcel <armin76@gentoo.org> apr-1.3.3.ebuild:
  arm/ia64/s390/sh stable wrt #246003

  18 Jan 2009; Tobias Klausmann <klausman@gentoo.org> apr-1.3.3.ebuild:
  Stable on alpha, bug #246003

  09 Jan 2009; Ferris McCormick <fmccor@gentoo.org> apr-1.3.3.ebuild:
  Sparc stable, Bug #246003.

  09 Jan 2009; Brent Baude <ranger@gentoo.org> apr-1.3.3.ebuild:
  Marking apr-1.3.3 ppc for bug 246003

  07 Jan 2009; Jeroen Roovers <jer@gentoo.org> apr-1.3.3.ebuild:
  Stable for HPPA (bug #246003).

  07 Jan 2009; Brent Baude <ranger@gentoo.org> apr-1.3.3.ebuild:
  Marking apr-1.3.3 ppc64 for bug 246003

  04 Jan 2009; Markus Meier <maekke@gentoo.org> apr-1.3.3.ebuild:
  amd64/x86 stable, bug #246003

  25 Oct 2008; Benedikt Böhm <hollow@gentoo.org> apr-1.3.3.ebuild:
  fix typo wrt #236156

  29 Aug 2008; Benedikt Böhm <hollow@gentoo.org> apr-1.3.3.ebuild:
  defaulting to USE=urandom wrt #232951
