@@ -9,11 +9,13 @@ DIST apr-1.3.0.tar.gz 1145703 RMD160 1b392ce9335f6608102edbba162cc2e9924da6cf SH
 DIST apr-1.3.2.tar.gz 1158861 RMD160 5606e1d53c7b5fa1214099515c8a746144e0cb7c SHA1 0219048f899ef1dccdbdca60718eb213c8be8e75 SHA256 1208e2caa48c5ac5d543de8642bde064731b45b490d104c59fc816aa88acafda
 DIST apr-1.3.3.tar.gz 1160542 RMD160 4cbaeed9ffba8510fdd3234a5cc6b759758daada SHA1 de978e223527325bdc12a083c0d5e17b25e0447f SHA256 390af2f94c38d9fa03cd6caac3549058bb3e2c4d9f7408b7b829ad75bd5cc273
 DIST apr-1.3.5.tar.gz 1162875 RMD160 d66d5f80b710c448dd35c575987f5acd6eab6f6d SHA1 127dc26598afeb86139707e65d222c00caae926a SHA256 f047422b39a5e5d933d598bd9fca2a1184e1506e4cd66364a990c7f2cd76960d
+DIST apr-1.3.6.tar.gz 1163776 RMD160 08f11723e94ee6ea643d741bba4df3081e4f1a72 SHA1 49805851338e22161b70453693a39a7e2d812f77 SHA256 362b238cab7d19fdafbfd1df8cdc2bd2d49f3d5a3a5e194e05fb5a7bc55378d9
 EBUILD apr-1.2.11.ebuild 3031 RMD160 60d7792c26b013f928bab4f3b393089c7e4476ab SHA1 d5b5e6edfb08927caacafbde6838506c9d79abf6 SHA256 12030696d0e7bf0edb1dc1c582735ede3dc5d06892ab49423d6e1a9e5b0273ff
 EBUILD apr-1.2.12.ebuild 3067 RMD160 5763aa8db124649958a761d62c4ce0d1ad15efb6 SHA1 e42589f9d39a64ca9bafd7e359ca5cf49781d9e0 SHA256 2837786ee76aba605eab3be41430be07c05e2970202366b0182cebfb48ba914f
 EBUILD apr-1.3.0.ebuild 3247 RMD160 29c474ed888dd7f9058dd097e15339a006bc8abe SHA1 0199d663324e654337897c3edd4a6e8a190f92c0 SHA256 9bc6beb26e457ccb05446549ee47a552cbaf0ee51cc52cb4a0c59134ea778ab9
 EBUILD apr-1.3.2.ebuild 3712 RMD160 b713bd8a27a8d6f6bf2c77ad1031039ab96f5810 SHA1 f1340f05d86b25a426ea310259107e64dfbda3b7 SHA256 63997224f39506f540fa09e55c565a900749f66eab9483c3d438b15ddaeb193a
 EBUILD apr-1.3.3.ebuild 4036 RMD160 7db266f31f27a198e0883afe95ef378446c2c55c SHA1 0dd2758dba4a9ec7e50af399fa618705ddf194d2 SHA256 08dd0e14447c6bf2faa721b0331272374c93c92ee4df5daf0dffbe555ea5b020
 EBUILD apr-1.3.5.ebuild 2755 RMD160 7e77a466d0a3d8885b39b8a40118713b368e9584 SHA1 ac514b419bef1b9e3d4ac168e5b4126afc0e92ff SHA256 ff8db1d49bbd3233c762690fb2003680c90be5e4e36c5b893e0a7bc3fc78bdec
-MISC ChangeLog 15534 RMD160 9e971b3937b399221615a4f29feb45c4bb91d648 SHA1 a0d9036e3fbb6e5edb82420d13c47b1bd131b09b SHA256 d4a1b7a12d027bd09bc337a353fe8b2cc1e56a032c8d107f66a9ca7518afde9c
+EBUILD apr-1.3.6.ebuild 2764 RMD160 6fb70fafed34eb02435f46a4ed05042e9b35013b SHA1 5b918c985fa52625f11a7c34bb6bf84a815b9eb1 SHA256 e6557ab87da7a25a920bbe365645bc8dfcaa7caddf80d3ebe4b17c49cad73c04
+MISC ChangeLog 15673 RMD160 728c069a6cfc38d8a974ee1ebc3eb11b33861727 SHA1 85db3ca997eea96664ce7c59a568c7c1a088ef36 SHA256 6e9fd6aa11847a0e850046705d6c7b2171261bad9c5862281e0f272883bf1656
 MISC metadata.xml 309 RMD160 416a52a9bb93c4e9ef8e3cf185504d1ef96b8e2a SHA1 9e0bb36e068db1ce9fdc6e1938304a922c5ea7fc SHA256 4850cde4bf33912a1b8609d2ab298a46ee34eb3e4e19e3b0ddfccdd3f0d9a44f
