@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/apr
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/apr/ChangeLog,v 1.129 2009/06/21 14:12:24 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/apr/ChangeLog,v 1.130 2009/07/07 18:27:17 arfrever Exp $
+
+*apr-1.3.6 (07 Jul 2009)
+
+  07 Jul 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  +apr-1.3.6.ebuild:
+  Version bump.
 
   21 Jun 2009; Brent Baude <ranger@gentoo.org> apr-1.3.5.ebuild:
   Marking apr-1.3.5 ppc for bug 272260
